hphp/hack/test/typecheck/class_top_var.php.exp
File "class_top_var.php", line 7, characters 7-7:
A class member, method, type, trait usage, trait require, xhp attribute, xhp use, or xhp category is expected here. (Parsing[1002])
